<resources>
    <string name="app_name">Location Reminders</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>

    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
    <string name="reminder_details">Reminder Details</string>
    <string name="detail_title">Title:</string>
    <string name="home">Home</string>
    <string name="description">Description:</string>
    <string name="lorem_ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nec sapien massa. Maecenas scelerisque euismod ultricies. Aliquam sollicitudin sapien vitae sem posuere, a ornare odio suscipit. Donec sit amet massa at risus sagittis scelerisque. Integer vehicula pellentesque urna, ac interdum sem dictum ornare. Phasellus vel enim ipsum. Donec commodo, neque non tempor dictum, lacus massa gravida nunc, at finibus justo sapien et eros. Etiam semper pulvinar augue et suscipit. Ut lectus purus, ultrices quis purus sed, gravida porta tellus. Duis finibus augue ac neque flavoring sodales.</string>
    <string name="add_pin">Add pin</string>
    <string name="personalized_localization">Personalized localization</string>
    <string name="denied">Denied</string>
    <string name="location_permission_was_not_granted">Location permission was not granted.</string>
    <string name="permission">Permission</string>
    <string name="permission_required">Permission required</string>
    <string name="background_permission_rationale">In order for your reminders to work properly, you must enable location access \"all the time\"</string>
    <string name="save_reminder_error_explanation">Select the location and add the title and description before saving.</string>
    <string name="error_getting_location_settings">Error getting location settings resolution: </string>
    <string name="geofence_add">Successfully added geofence!</string>
    <string name="exception_occurred">An exception occurred: %1$s</string>

    <string name="message_permission_granted">Permission for notification already granted.</string>
    <string name="message_permission_denied">Permissão de notificação não concedida.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
